
2013-April-30 Chris Morley

	Add MesmerQAschema and examplsSchema directories for
	new(schema-friendly) XML file format versions.

	[Several source files] Make C++ parsing compatible with both old
	and new XML file formats.

	schemas/CMLforMesmer.xsd,mesmer.xsd,mesmerPlugins.xsd, defaults.xml:
	 Update

2013-April-27 Chris Morley

	src/XMLPersist.cpp:fix for corrupted output XML file bug
	introduced in bath gas mod.

2013-April-27 Struan Robertson
	
	* SensitivityAnalysis.cpp: Altered to read covariance matrix.

2013-April-14 Struan Robertson
	
	* System.cpp: Update of version to 3.0.

	* MESMER manual.docx: Updated to include material relating to hessian.

2013-April-10 Struan Robertson
	
	* MolecularComponents.cpp: Minor change to account for transition 
	state imaginary frequency.

2013-April-10 Struan Robertson
	
	* MolecularComponents.cpp/.h: Re-orientation of Hessian an part of
	vibrational mode analysis.

2013-April-08 Struan Robertson
	
	* CollisionOperator.cpp: Fix for linux build break.

2013-April-08 Chris Morley

	Use different bath gases in the same run
	* src/plugins/ExponentialDown.cpp,
	src/EnergyTransferModel.h,src/plugins/GaussianModel.cpp: 
	parse for deltaEDown for specified bath gases
	 
	* src/MolecularComponents.cpp,src/MolecularComponents.h,
	src/MoleculeManager.h: keep a map of bathGasName/energyTransferModel
	rather than just m_bathGas.

	* src/System.cpp: do parsing of <me:bathGas> before reactions and
	molecules

	* src/MesmerEnv.h,src/unitsConversion.h: extra variable to transmit
	current bath gas.

	* src/Persistence.h,src/XMLPersist.cpp,src/XMLPersist.h: added a
	parameter to XmlMoveToProperty() to make it easier to move to the
	next sibling CML property

	* src/CollisionOperator.cpp: error message

	*src/Constants.h,src/MolecularComponents.cpp: units conversion for
	hessians from Robin


2013-April-07 Struan Robertson

	* CollisionOperator.cpp/.h, TMatrix.h: Replaced d2D types with generic
	STL types or TMatrix types.
