@@ -157,7 +157,7 @@
       
       <me:DOSCMethod>QMRotors</me:DOSCMethod>
 
-      <me:ExtraDOSCMethod xsi:type="HinderedRotorQM1D">
+      <me:ExtraDOSCMethod xsi:type="me:HinderedRotorQM1D">
         <me:bondRef>b6</me:bondRef>
         <me:HinderedRotorPotential format="numerical" units="kcal/mol" expansionSize="10">
           <me:PotentialPoint angle="  0"  potential="-105333.395738448"/>
@@ -236,7 +236,7 @@
         <me:PlotStates/>
       </me:ExtraDOSCMethod>
 
-      <me:ExtraDOSCMethod xsi:type="HinderedRotorQM1D">
+      <me:ExtraDOSCMethod xsi:type="me:HinderedRotorQM1D">
         <me:bondRef>b2</me:bondRef>
         <me:HinderedRotorPotential format="analytical" units="kJ/mol">
           <me:PotentialPoint index="0"  coefficient="6.2"/>
@@ -246,7 +246,7 @@
         <me:PlotStates/>
       </me:ExtraDOSCMethod>
 
-      <me:ExtraDOSCMethod xsi:type="HinderedRotorQM1D">
+      <me:ExtraDOSCMethod xsi:type="me:HinderedRotorQM1D">
         <me:bondRef>b8</me:bondRef>
         <me:HinderedRotorPotential format="analytical" units="kJ/mol">
           <me:PotentialPoint index="0"  coefficient="6.2"/>
@@ -344,7 +344,7 @@
         </property>
       </propertyList>
 
-      <me:ExtraDOSCMethod xsi:type="HinderedRotorQM1D">
+      <me:ExtraDOSCMethod xsi:type="me:HinderedRotorQM1D">
         <me:bondRef>b6</me:bondRef>
         <me:HinderedRotorPotential format="numerical" units="kcal/mol" expansionSize="10">
           <me:PotentialPoint angle="  0"  potential="-105333.395738448"/>
@@ -471,8 +471,8 @@
         <molecule ref="Butane"  role="modelled" />
       </product>
 
-      <me:MCRCMethod xsi:type="MesmerILT">
-        <me:preExponential>3.e-10</me:preExponential>
+      <me:MCRCMethod xsi:type="me:MesmerILT">
+        <me:preExponential units="cm3molecule-1s-1">3.e-10</me:preExponential>
         <me:activationEnergy  units="cm-1">0.0</me:activationEnergy>
         <me:TInfinity>300.0</me:TInfinity>
         <me:nInfinity>0.8</me:nInfinity>
