@@ -69,7 +69,7 @@
 
             <me:DOSCMethod>QMRotors</me:DOSCMethod>
 
-            <me:ExtraDOSCMethod xsi:type="HinderedRotorQM1D">
+            <me:ExtraDOSCMethod xsi:type="me:HinderedRotorQM1D">
                 <me:bondRef>b1</me:bondRef>
                 <me:HinderedRotorPotential format="numerical" units="kcal/mol" expansionSize="7">
                     <me:PotentialPoint angle="10	"  potential="-878.99179655"/>
@@ -159,7 +159,7 @@
                 </property>
             </propertyList>
 
-            <me:ExtraDOSCMethod xsi:type="HinderedRotorQM1D">
+            <me:ExtraDOSCMethod xsi:type="me:HinderedRotorQM1D">
                 <me:bondRef>b1</me:bondRef>
                 <me:HinderedRotorPotential format="analytical" units="kJ/mol">
                     <me:PotentialPoint index="0"  coefficient="6.2"/>
@@ -217,9 +217,9 @@
                 <molecule ref="Ethane"  role="modelled" />
             </product>
 
-          <me:MCRCMethod xsi:type="MesmerILT">
-            <me:preExponential>3.e-10</me:preExponential>
-            <me:activationEnergy  units="cm-1">0.0</me:activationEnergy>
+          <me:MCRCMethod xsi:type="me:MesmerILT">
+            <me:preExponential units="cm3molecule-1s-1">3.e-10</me:preExponential>
+            <me:activationEnergy units="cm-1">0.0</me:activationEnergy>
             <me:TInfinity>300.0</me:TInfinity>
             <me:nInfinity>0.8</me:nInfinity>
           </me:MCRCMethod>
