@@ -1,3 +1,7 @@
+2013-April-30 Chris Morley
+
+	Update to parse xsi:type me:MesmerILT and similar. Mods like
+	required units atribute for pre-exponential etc.
 
 2013-April-30 Chris Morley
 
